# dietgpu

./: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  test.txt
dietgpu/: CMakeLists.txt  DietGpu.cpp  ans_test.py  benchmark.py  float_test.py
dietgpu/ans/: ANSStatisticsTest.cu  ANSTest.cu  BatchPrefixSum.cuh  BatchPrefixSumTest.cu  BatchProvider.cuh  CMakeLists.txt  GpuANSCodec.h  GpuANSDecode.cu  GpuANSDecode.cuh  GpuANSEncode.cu  GpuANSEncode.cuh  GpuANSInfo.cu  GpuANSInfo.cuh  GpuANSStatistics.cuh  GpuANSUtils.cuh  GpuChecksum.cuh
dietgpu/float/: CMakeLists.txt  FloatTest.cu  GpuFloatCodec.h  GpuFloatCompress.cu  GpuFloatCompress.cuh  GpuFloatDecompress.cu  GpuFloatDecompress.cuh  GpuFloatInfo.cu  GpuFloatInfo.cuh  GpuFloatUtils.cuh
dietgpu/utils/: CMakeLists.txt  DeviceDefs.cuh  DeviceUtils.cpp  DeviceUtils.h  PtxUtils.cuh  StackDeviceMemory.cpp  StackDeviceMemory.h  StaticUtils.h
